# parse-yoast-sitemap

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  config.example.json  ec2_cli.py  ec2_cli_config.example.json  ec2_config.example.json  ec2_manager.py  extract_locs.c  extract_yoast_sitemap.sh  process_report.py  pyproject.toml  requirements.txt  serve_reports.py  server_config.example.json
.github/workflows/: ci.yml  tests.yml
src/yoast_monitor/: cli.py  process_report.py  serve_reports.py
tests/: extract_yoast_sitemap.bats  test_process_report.py
tests/data/: index1.template.xml  index2.template.xml  pages.xml  posts.xml  robots.template.txt  sitemap_index.template.xml
